# python-misc

./: .gitignore  Dockerfile  README.md  github-workflows.md  logging.md  netlify.toml  package.json  tsconfig.json  uv.md
.github/workflows/: airflow.yml  docker-build.yml  lib-sounds.yml  pygame-galaga.yml  test-hello.yml  test-lib-add-c.yml  test-lib-add.yml  test-lib-chess.yml  test-lib-inputs.yml  test-lib-models.yml  test-lib-network.yml  test-lib-sprites.yml  test-lib-spritesheet.yml  test-lib-vgmplay.yml  test-libs-russ-font.yml  test-pandas-examples.yml  test-play-mp3.yml  test-play-note.yml  test-pygame-display-with-sound.yml  test-pygame-display.yml  test-pygame-galaga.yml  test-pygame-graph.yml  test-pygame-keyboard-input.yml  test-pygame-keyboard-inputs.yml  test-pygame-sprite.yml  test.yml
airflow/: .gitignore  README.md  airflow.cfg  airflow.md  docker-compose.yml  main.py  pyproject.toml
assets/: .gitignore
bible/: README.md  manuscripts.md
bible/marcum/: refs.md
devops/: devops.md  netlify.md
flask-api/: .gitignore  Dockerfile  README.md  app.py  flask-api.conf  pyproject.toml  start.sh
flet/hello/: README.md  pyproject.toml
hello/: README.md  pyproject.toml
hello/tests/: test_main.py
lib-models/: README.md  pyproject.toml
lib-models/src/lib_models/: __init__.py  session.py
lib-models/src/lib_models/models/: __init__.py  user.py  user2.py
lib-models/tests/: test_main.py  test_use_models.py
lib-network/: .gitignore  README.md  client_cert.crt  pyproject.toml  selfsigned.crt  server_cert.crt
lib-network/src/lib_network/: __init__.py  gen_keys.py  tcp_client.py  tcp_server.py  utils.py
lib-network/src/lib_network/certs/: public.crt
lib-network/tests/: gen_cert.py  simple_socket_example.py  simple_tls_socket_example.py  ssl_connection.py  tcp_client_run.py  tcp_server_run.py  test_server.py  tls_client.py  tls_client_side.py  tls_client_verisign.py  tls_server.py
lib-sounds/: .gitignore  Dockerfile  README.md  pyproject.toml
lib-sounds/src/lib_sounds/: __init__.py  constants.py  futuristic_soundboard.py  utils.py
lib-sounds/tests/: conftest.py  test_came.py  test_piano.py  test_sounds.py
lib-sounds/tests/assets/: assets.md
lib-sprites/: .gitignore  README.md  pyproject.toml
lib-sprites/src/lib_sprites/: __init__.py  blade_sprites.py  connect_four_sprites.py  galaga_sprites.py  megaman_sprites.py  pong_sprites.py
lib-sprites/tests/: conftest.py  init_screen.py  test_blade.py  test_connect_four.py  test_display_chess_pieces.py  test_display_galaga.py  test_mouse.py  test_pong.py  test_pong_2.py  test_read_png.py  test_read_png_and_megaman.py  test_starry_night.py  test_starry_night_and_player.py
lib-spritesheet/: README.md  pyproject.toml
lib-spritesheet/tests/: conftest.py  test_display_galaga.py
libs/lib-add/: README.md  main.py  pyproject.toml
libs/lib-add-c/: README.md  pyproject.toml
libs/lib-add-c/src/: main.cpp
libs/lib-add-c/src/lib_add_c/: __init__.py  _core.pyi
libs/lib-add-c/tests/: main.py  test_main.py
libs/lib-add/src/lib_add/: __init__.py
libs/lib-add/tests/: test_add.py
libs/lib-bulletchess/: CMakeLists.txt  README.md  pyproject.toml
libs/lib-bulletchess/src/: bulletchess.c  bulletchess.h  main.c
libs/lib-bulletchess/src/lib_bulletchess/: __init__.py
libs/lib-inputs/: .gitignore  pyproject.toml
libs/models/: README.md  base.py  example.py  main.py  pyproject.toml  session.py  user.py  user2.py
libs/models/src/lib_models/: main.py
libs/models/tests/: test_main.py
libs/russ-font/: .gitignore  README.md  pyproject.toml
libs/russ-font/src/russ_font/: __init__.py
libs/russ-font/tests/: conftest.py  technologic.csv  technologic_lyrics.txt  technologic_words.csv  test_1.py  test_font.py
libs/sound/: README.md
libs/sound/vgmplay/: .gitignore  CMakeLists.txt  README.md  pyproject.toml
libs/sound/vgmplay/VGMPlay/: Makefile  Stream.c  Stream.h  VGMPlay.c  VGMPlayUI.c  vgm2wav.c
libs/sound/vgmplay/VGMPlay/chips/: fm.h  sn764intf.c
libs/sound/vgmplay/libs/: .gitignore  CMakeLists.txt  main.c  vgmlib.c  vgmlib.h  wrapper.c
libs/sound/vgmplay/libs/VGMPlay/: Makefile  VGMPlay.c  VGMPlay_Intf.h  vgm2wav.c  vgm2wav.h
libs/sound/vgmplay/libs/VGMPlay/chips/: adlibemu.h  opl.c  opl.h
libs/sound/vgmplay/src/: main.c
libs/sound/vgmplay/src/vgmplay/: __init__.py
libs/sound/vgmplay/tests/: 02 Game Start Music.vgz  test_main.py
netlify/: setup.md
pandas-examples/: pyproject.toml
play-mp3/: main.py  pyproject.toml
play-note/: README.md  freq.csv  main.py  midio.py  pygame-midi-input-device.py  pygame-play-midi-note.py  pygame-play-midi.py  pyproject.toml  square.py  square2.py
play-note/tests/: test_main.py
pygame-display/: README.md  main.py  pyproject.toml
pygame-display-with-sound/: pyproject.toml
pygame/chess/: main.py  (+2 more)
pygame/connect-four/: README.md  pyproject.toml
pygame/connect-four/src/connect_four/: __init__.py  connect_four.py
pygame/connect-four/tests/: conftest.py  test_connect_four.py
pygame/galaga/: Dockerfile  README.md  main.py  pyproject.toml
pygame/galaga/src/galaga/: __init__.py  spelling.py
pygame/galaga/tests/: conftest.py  test_display_galaga.py  test_main.py  test_starry_night_and_player.py
pygame/misc/: README.md  main2.py  pyproject.toml
pygame/misc/src/misc/: __init__.py  pygame_handler.py  spelling.py  technologic.py  technologic_words.csv
pygame/mouse_input/: README.md  main.py  pyproject.toml
python-libs/: README.md
python-libs/lib-chess/: README.md  pyproject.toml
python-libs/lib-chess/src/lib_chess/: __init__.py
python-libs/lib-chess/src/lib_chess/controllers/: chess.py
python-libs/lib-chess/src/lib_chess/models/: __init__.py  base.py  game.py
python-libs/lib-chess/test/: test_1.py
react-app/: README.md
static-sites/: README.md
template/: pyproject.toml
tkinter/instant-message/: README.md  pyproject.toml
tkinter/instant-message/src/instant_message/: __init__.py  instant_messenger.py
tkinter/instant-message/src/instant_message/certs/: public.crt
tkinter/instant-message/tests/: hello.py  im.py
(+96 files in other folders)
