[project]
name = "lib-sprites"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { email = "russjohnson09@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "lib-spritesheet",
    "pygame-ce>=2.5.6",
]

[build-system]
requires = ["uv_build>=0.9.9,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=9.0.1",
]

[tool.uv.sources]
lib-spritesheet = { git = "https://github.com/russjohnson09/python-misc.git", subdirectory = "lib-spritesheet" }
