[project]
name = "play-note"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "mido>=1.3.3",
    "numpy>=2.3.4",
    "pygame>=2.6.1",
    "scipy>=1.16.3",
]

[dependency-groups]
dev = [
    "pytest>=9.0.1",
]
