[project]
name = "lib-add"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { email = "russjohnson09@gmail.com" }
]
requires-python = ">=3.13"
dependencies = []

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "setuptools>=80.9.0",
]


[build-system]
#requires = ["uv_build>=0.9.9,<0.10.0"]
#build-backend = "uv_build"
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
ext-modules = [
  #{name = "mylib.foo", sources = ["foo.c"]}
  {name = "add", sources = ["add.cpp"]}
]

