[project]
#https://packaging.python.org/en/latest/tutorials/packaging-projects/
#name = "lib-models"
name = "lib_models"

version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "sqlalchemy>=2.0.44",
]

[dependency-groups]
dev = [
    "pytest>=9.0.1",
]


#https://github.com/pypa/packaging-problems/issues/615
#[tool.pytest.ini_options]
#addopts = ["--import-mode=importlib"]