[project]
name = "connect-four"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { email = "russjohnson09@gmail.com" }
]
requires-python = ">=3.13"

dependencies = [
    "lib-sprites",
    "pygame-ce>=2.5.6",
]

[dependency-groups]
dev = [
    "pytest>=9.0.1",
]

[build-system]
requires = ["uv_build>=0.9.9,<0.10.0"]
build-backend = "uv_build"


[tool.uv.sources]
lib-sprites = { git = "https://github.com/russjohnson09/python-misc.git", subdirectory = "lib-sprites" }