[project]
name = "galaga"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "lib-sprites",
    "lib-inputs",
    "pygame-ce>=2.5.6",
]

[dependency-groups]
dev = [
    "pytest>=9.0.1",
]

[tool.uv.sources]
lib-models = { git = "ssh://git@github.com/russjohnson09/python-misc.git", subdirectory = "lib-models",  branch= "main" }
lib-sprites = { git = "https://github.com/russjohnson09/python-misc.git", subdirectory = "lib-sprites" }
lib-inputs = { git = "https://github.com/russjohnson09/python-misc.git", subdirectory = "libs/lib-inputs" }

