[project]
name = "lib-chess"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { email = "russjohnson09@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "python-chess>=1.999",
    "sqlalchemy>=1.4.54",
]

[build-system]
requires = ["uv_build>=0.9.9,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=9.0.1",
    "sqlalchemy==1.4.54",
]
