[project]
name = "vgmplay"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { email = "russjohnson09@gmail.com" }
]
requires-python = ">=3.13"
dependencies = []

[project.scripts]
vgmplay = "vgmplay:main"

[tool.scikit-build]
minimum-version = "build-system.requires"
build-dir = "build/{wheel_tag}"

[tool.uv]
cache-keys = [{ file = "pyproject.toml" }, { file = "src/**/*.{h,c,hpp,cpp}" }, { file = "CMakeLists.txt" }]

[build-system]
#requires = ["scikit-build-core>=0.10", "pybind11"]
requires = [
    "scikit-build-core>=0.10"
]
build-backend = "scikit_build_core.build"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
