# https://cmake.org/cmake/help/latest/guide/tutorial/Before%20You%20Begin.html#getting-the-tutorial-exercises
# https://code.visualstudio.com/docs/cpp/cmake-quickstart

cmake_minimum_required(VERSION 3.15)
project(vgmplay VERSION 0.1.0 LANGUAGES C CXX)



file(GLOB_RECURSE SRC_FILES CONFIGURE_DEPENDS
    # "VGMPlay/*.c"
    VGMPlay/VGMPlay.c
    VGMPlay/VGMFile.c
    VGMPlay/ChipMapper.c
    VGMPlay/VGMPlay_AddFmts.c
    # "VGMPlay/vgm2wav.c"
    # VGMPlay/chips/*.c


    # "VGMPlay/chips/*.c"
    # "${PROJECT_SOURCE_DIR}/VGMPlay/chips/adlibemu_opl3.c"

    # vgmlib.c

    VGMPlay/chips/adlibemu_opl2.c
    VGMPlay/chips/adlibemu_opl3.c

 VGMPlay/chips/sn76489.c 
 VGMPlay/chips/262intf.c 
 VGMPlay/chips/2151intf.c 
 VGMPlay/chips/2610intf.c 
 VGMPlay/chips/2203intf.c 
 VGMPlay/chips/2413intf.c 
 VGMPlay/chips/2608intf.c 
 VGMPlay/chips/2612intf.c 
 VGMPlay/chips/3526intf.c 
 VGMPlay/chips/3812intf.c
VGMPlay/chips/8950intf.c


VGMPlay/chips/adlibemu_opl2.c
VGMPlay/chips/adlibemu_opl3.c
VGMPlay/chips/ay8910.c


VGMPlay/chips/ay_intf.c
VGMPlay/chips/c140.c
VGMPlay/chips/c352.c
VGMPlay/chips/c6280.c


VGMPlay/chips/c6280intf.c
VGMPlay/chips/dac_control.c
VGMPlay/chips/es5503.c
VGMPlay/chips/es5506.c


VGMPlay/chips/emu2149.c
VGMPlay/chips/emu2413.c
VGMPlay/chips/fm2612.c
VGMPlay/chips/fm.c


VGMPlay/chips/fmopl.c
VGMPlay/chips/gb.c
VGMPlay/chips/iremga20.c
VGMPlay/chips/k051649.c


VGMPlay/chips/k053260.c
VGMPlay/chips/k054539.c
VGMPlay/chips/multipcm.c


VGMPlay/chips/nes_apu.c
VGMPlay/chips/nes_intf.c
VGMPlay/chips/np_nes_apu.c


VGMPlay/chips/np_nes_dmc.c
VGMPlay/chips/np_nes_fds.c
VGMPlay/chips/okim6258.c


VGMPlay/chips/okim6295.c
VGMPlay/chips/Ootake_PSG.c
VGMPlay/chips/opll.c


VGMPlay/chips/opm.c
VGMPlay/chips/panning.c
VGMPlay/chips/pokey.c


VGMPlay/chips/pwm.c
VGMPlay/chips/qsound_ctr.c
VGMPlay/chips/qsound_mame.c


VGMPlay/chips/qsound_intf.c
VGMPlay/chips/rf5c68.c
VGMPlay/chips/saa1099.c


VGMPlay/chips/segapcm.c
VGMPlay/chips/scd_pcm.c
VGMPlay/chips/scsp.c


VGMPlay/chips/scspdsp.c
VGMPlay/chips/sn76496.c
VGMPlay/chips/sn764intf.c


VGMPlay/chips/upd7759.c
VGMPlay/chips/vsu.c
VGMPlay/chips/ws_audio.c


VGMPlay/chips/x1_010.c
VGMPlay/chips/ym2151.c
VGMPlay/chips/ym2413.c


VGMPlay/chips/ym2612.c
VGMPlay/chips/ym3438.c
VGMPlay/chips/ymdeltat.c


VGMPlay/chips/ymf262.c
VGMPlay/chips/ymf271.c
VGMPlay/chips/ymf278b.c


VGMPlay/chips/ymz280b.c
VGMPlay/chips/ay8910_opl.c
VGMPlay/chips/sn76496_opl.c


VGMPlay/chips/ym2413hd.c
VGMPlay/chips/ym2413_opl.c
# all this just to avoid including chips/opl.c

    # VGMPlay/chips/opl.c
    # VGMPlay/chips/*.c
    # "${PROJECT_SOURCE_DIR}/VGMPlay/chips/*.c"
)
 
# https://stackoverflow.com/questions/5005363/undefined-reference-to-sin

# https://stackoverflow.com/questions/17511496/how-to-create-a-shared-library-with-cmake
# libmylib.so
add_library(vgm SHARED
    # vgmlib.c
    ${SRC_FILES}
    # VGMPlay/chips/adlibemu_opl3.c
    # VGMPlay/chips/262intf.c
)

# libm (math library) and libz (zlib)
# LDFLAGS := -lm -lz $(LDFLAGS)

#  windows
#  -lm -lz -lkernel32 -lwinmm
# wsl / ubuntu
# -lm -lz -lrt -lpthread -pthread
find_library(MATH_LIBRARY m)

# find_library(MATH_LIBRARY z) # find zlib
#  ./vgm2wav 
target_link_libraries(vgm m)
# /usr/bin/ld: libvgm.so: undefined reference to `gzopen' include zlib
target_link_libraries(vgm z)

# https://discourse.cmake.org/t/creating-shared-libraries-and-an-executable/2846

# make WINDOWS=1 && ./vgm2wav.exe ../nakama.vgm ../../../../assets/shining_force_nakama.wav
# add_executable(
#     vgm2wav vgmlib.c main.c
# )


# add_executable(
#     vgm2wav main.c
# )

add_executable(
    vgm2wav VGMPlay/vgm2wav.c
)
# add_dependencies( vgm2wav vgm  )
target_link_libraries( vgm2wav PRIVATE vgm )




# install(TARGETS _module DESTINATION ${SKBUILD_PROJECT_NAME})

# camke .